--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "colors": "^1.4.0",
+    "dotenv": "^16.0.2",
     "inquirer": "^8.1.2"
   }
 }
